...
                                        <rect key="frame" x="0.0" y="0.0" width="188" height="667"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="soloButton"/>
                                        <connections>
                                            <segue destination="rEn-aQ-cBA" kind="show" id="P7H-KQ-iz9"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="188" height="667"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <accessibility key="accessibilityConfiguration" identifier="partyButton"/>
                                        <connections>
                                            <segue destination="A6K-2B-28t" kind="show" id="7zV-Bk-Zpe"/>
...
                                <rect key="frame" x="145" y="318" width="86" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Create Party"/>
                                <connections>
                                    <segue destination="rEn-aQ-cBA" kind="show" id="2Cf-TS-OvD"/>
...
                                <rect key="frame" x="153" y="369" width="69" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" title="Join Party"/>
                                <connections>
                                    <segue destination="ueO-u5-jgi" kind="show" id="TUm-PO-6DW"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Enter PIN:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PDK-4W-M6R">
                                <rect key="frame" x="120" y="259" width="144" height="36"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MDf-9e-1ah" customClass="DesignableButton" customModule="ChupApp" customModuleProvider="target">
                                                <rect key="frame" x="0.0" y="0.0" width="81.5" height="161"/>
                                                <state key="normal" title="Drink Up"/>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
...
